starlark-rust/starlark/src/typing/golden/types_of_args_kwargs.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib tests
# ```

Code:
def foo(*args: str, **kwargs: int):
    pass

def test():
    # Good
    foo("a")
    foo(b=1)
    # Bad
    foo(1)
    # TODO(nga): this should fail.
    foo(c="x")

Error:
error: Expected type `str` but got `int`
  --> filename:10:9
   |
10 |     foo(1)
   |         ^
   |

Types:
args: tuple[str, ...]
kwargs: dict[str, int]

Compiler typechecker (eval):
error: Expected type `str` but got `int`
  --> filename:10:9
   |
10 |     foo(1)
   |         ^
   |
